samples/_failures_safe/1761043281_71ea62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_268badf4.c: In function ‘main’:
./samples/SAFE/__tmp_268badf4.c:162:9: error: expected expression at end of input
  162 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_268badf4.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_268badf4.c:162:9: error: expected declaration or statement at end of input
